refactoring code en fontion de retours du scanne de sonarcube et non couverture des tests